--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li class="nav">Home<a href="#"></a></li>
+			<li class="nav">About us<a href="#"></a></li>
+			<li class="nav">contact us<a href="#"></a></li>
+		</ul>
+	</nav>
+	<h1>3 random audios</h1>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+	</audio>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+	</audio>
+	<audio controls>
+		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+	</audio>
+</h1>
     <script type="text/javascript" src="./script.js">
 </script>
 
